<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="li.nibble.android.codingtest.MainActivity">

<SearchView
    android:id="@+id/search_view"
    android:background="@android:color/transparent"
    android:searchIcon="@drawable/btn_search"
    android:closeIcon="@drawable/btn_close"
    android:textColor="@color/textColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

<android.support.v7.widget.RecyclerView
    android:id="@+id/rv_characters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/search_view"
    tools:context="li.nibble.android.codingtest.MainActivity"
    tools:showIn="@layout/fragment_list"
    />

<android.support.v4.widget.ContentLoadingProgressBar
    android:id="@+id/pb"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    />
</RelativeLayout>