<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="li.nibble.android.codingtest.MainActivity">

    <TextView
        android:id="@+id/house_title"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textAlignment="center"/>
    <SearchView
        android:layout_below="@+id/house_title"
        android:id="@+id/search_view"
        android:background="@android:color/transparent"
        android:searchIcon="@drawable/btn_search"
        android:closeIcon="@drawable/btn_close"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_houses"
        android:layout_below="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="li.nibble.android.codingtest.MainActivity"
        tools:showIn="@layout/fragment_list"
        />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
</RelativeLayout>